# chess

./: Cargo.toml  README.MD  inputs.txt  pastor.txt  piece_config1.txt  todo.txt
src/: ai.rs  aux_func.rs  classes.rs  game.rs  main.rs  piece.rs  position.rs
ui/: index.html  index.js  styles.css
