[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
ws = "0.9.2"
